feat(collection): add explicit index rebuild recovery (#8)